crates/formatter/tests/snapshots/snapshots__synapse__main__delta__88__01_add_delayed_events.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2024 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

create table delayed_events (
	delay_id text not null,
	user_localpart text not null,
	device_id text,
	delay bigint not null,
	send_ts bigint not null,
	room_id text not null,
	event_type text not null,
	state_key text,
	origin_server_ts bigint,
	content bytea not null,
	-- is_processed = TRUE means that the work of sending the delayed event has begun.
	-- Once the send is complete, the delayed event is removed from this table.
	is_processed boolean not null default FALSE,
	primary key (user_localpart, delay_id)
);

create index delayed_events_send_ts on delayed_events (send_ts);
create index delayed_events_is_processed on delayed_events (is_processed);
create index delayed_events_room_state_event_idx
	on delayed_events (room_id, event_type, state_key)
	where state_key is not null;

create table delayed_events_stream_pos (
	Lock char(1) not null unique default 'X', -- Makes sure this table only has one row.
	stream_id bigint not null,
	check(Lock = 'X')
);

-- Start processing events from the point this migration was run, rather
-- than the beginning of time.
insert into delayed_events_stream_pos (stream_id)
select coalesce(max(stream_ordering), 0)
from events;
