crates/formatter/tests/snapshots/snapshots__synapse__main__delta__88__06_events_received_ts_index.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2024 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

-- Add an index on `events.received_ts` for `m.room.member` events to allow for
-- efficient lookup of events by timestamp in some Admin API's
insert into background_updates (ordering, update_name, progress_json)
values (8806, 'events_received_ts_index', '{}');
